fixing config.cmd cmd template

--- a/emacs.org
+++ b/emacs.org
@@ -116,7 +116,7 @@ https://clang.llvm.org/docs/JSONCompilationDatabase.html
   (defun cmake-init-shell-config ()
     (interactive)
     (if (eq system-type 'windows-nt)
-        (shell-command (format "echo cmake -S . -B out\\build -G %s -D CMAKE_BUILD_TYPE=DEBUG -D CMAKE_C_COMPILER=%s -D CMAKE_CXX_COMPILER=%s -D CMAKE_EXPORT_COMPILE_COMMANDS=1 > cmake-config.cmd" build_system c_compiler c++_compiler))))
+        (shell-command (format "echo 'cmake -S . -B out\\build -G %s -D CMAKE_BUILD_TYPE=DEBUG -D CMAKE_C_COMPILER=%s -D CMAKE_CXX_COMPILER=%s -D CMAKE_EXPORT_COMPILE_COMMANDS=1' > cmake-config.cmd" build_system c_compiler c++_compiler))))
 
 #+end_src
 
